--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -1,5 +1,21 @@
 @import 'variables';
 
+.hidden {
+  display: none;
+  opacity: 0;
+}
+
+
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+  transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 420ms!important;
+  transition-delay: 0!important;
+}
+
+
+
 .logo {
   color: #142F53;
   font-feature-settings: 'clig' off, 'liga' off;
@@ -11,7 +27,278 @@
   gap: 16px;
   display: flex;
   align-items: center;
+  .icon {
+    width: 56px;
+    height: 56px;
+  }
 }
+
+.nav {
+  padding: 56px 0;
+  transition: .3s;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 999;
+
+  &.fixed {
+    padding: 16px 0;
+    background: rgba(244, 245, 249, 0.80);
+    backdrop-filter: blur(10px);
+  }
+
+  &-col {
+    .toggle-theme {
+      display: none;
+    }
+  }
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 32px;
+
+  a {
+    color: #143054;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    transition: .3s;
+    cursor: pointer;
+
+    &:hover {
+      color: #395FC2;
+
+      &.primary-button {
+        color: #395FC2;
+        border-color: #395FC2;
+
+        &-dark {
+          background: #214C83;
+          border-color: #143054;
+          color: #BFFFF7;
+        }
+      }
+    }
+
+    &.primary-button {
+      color: #143054;
+      font-weight: 700;
+      line-height: 25.915px;
+    
+      &-dark {
+        background: #143054;
+        color: #BFFFF7;
+      }
+    }
+  }
+  &-button-group {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
+.primary-button {
+  display: inline-block;
+  padding: 10px 25.6px;
+  border-radius: 14px;
+  transition: .3s;
+  border: 1.08px solid #143054;
+  color: #143054;
+  text-align: center;
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25.915px;
+
+  &:hover {
+    color: #395FC2;
+    border-color: #395FC2;
+  }
+
+  &-dark {
+    background: #143054;
+    color: #BFFFF7;
+
+    &:hover {
+      background: #214C83;
+      border-color: #143054;
+    }
+  }
+}
+
+.head {
+  padding-top: 172px;
+  padding-bottom: 55px;
+
+  &-toggle-theme {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .custom-checkbox {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+
+      .light {
+        color: #5B6283;
+      }
+
+      .dark {
+        color: #C4C9D4;
+      }
+
+      input {
+        &:checked {
+          ~ .light {
+            color: #C4C9D4;
+          }
+          ~ .dark {
+            color: #5B6283;
+          }
+        }
+      }
+    }
+
+    svg {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  &-item {
+    text-align: center;
+    margin-top: 55px;
+    h1 {
+      color: #143054;
+      font-family: Poppins;
+      font-size: 60px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+      margin-bottom: 16px;
+    }
+
+    p {
+      color: #143054;
+      font-family: Poppins;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 160%;
+      margin-bottom: 32px;
+
+      span {
+        color: #9D43C6;
+      }
+
+      &.head-info {
+        color: #143054;
+        text-align: center;
+        font-family: Poppins;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 120%; /* 14.4px */
+        margin-top: 18px;
+      }
+    }
+    
+  }
+}
+
+.custom-checkbox {
+  label {
+    display: flex;
+    width: 38px;
+    height: 20px;
+    padding: 2px;
+    align-items: center;
+    position: relative;
+    border-radius: 11px;
+    border: 1px solid #CDD1D9;
+    background: #FFF;
+    cursor: pointer;
+
+    &::before {
+      content: "";
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #5B6283;
+      transition: .15s;
+      position: absolute;
+      top: 50%;
+      left: 2px;
+      transform: translateY(-50%);
+    }
+  }
+
+  input {
+    display: none;
+    &:checked {
+      ~label {
+        &::before {
+          left: calc(100% - 18px);
+        }
+      }
+    }
+  }
+}
+
+.custom-video {
+  position: relative;
+  margin-bottom: 40px;
+
+  &-play {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 2;
+    cursor: pointer;
+    transition: .3s;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    .icon {
+      width: 124px;
+      height: 124px;
+      color: #FFF;
+    }
+  }
+
+  video {
+    border-radius: 14px;
+    width: 100%;
+    height: 548px;
+    object-fit: cover;
+  }
+}
+
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     background: linear-gradient(0deg, rgba(41, 42, 49, 0.40) 0%, rgba(41, 42, 49, 0.40) 100%), linear-gradient(90deg, rgba(173, 0, 255, 0.10) 0%, rgba(11, 55, 201, 0.10) 50.47%, rgba(0, 216, 255, 0.10) 100%), #242734;
+//   }
+// }
+
+// html[data-theme='dark'] {
+//   background: linear-gradient(0deg, rgba(41, 42, 49, 0.40) 0%, rgba(41, 42, 49, 0.40) 100%), linear-gradient(90deg, rgba(173, 0, 255, 0.10) 0%, rgba(11, 55, 201, 0.10) 50.47%, rgba(0, 216, 255, 0.10) 100%), #242734;
+// }
 
 body {
   overflow-x: hidden;
