--- a/src/sass/info/MediaQueries/tabletLandscape.scss
+++ b/src/sass/info/MediaQueries/tabletLandscape.scss
@@ -44,4 +44,12 @@
   .superhero-tab {
     display: flex;
   }
+
+  .metrics-graphs {
+    width: 100%;
+    svg {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 }
